add lab4 Add Kafka consumer & producer add error kafka handling